; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_getinfo.c_Curl_initinfo.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_getinfo.c_Curl_initinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_easy = type { %struct.PureInfo, %struct.Progress }
%struct.PureInfo = type { i32, i8*, i8*, i64, i64, i64, i64, i32*, i32*, i64, i64, i64, i64, i64, i32, i64, i64, i64 }
%struct.Progress = type { i32, i64, i64, i64, i64, i64, i64, i64 }

@FALSE = common dso_local global i32 0, align 4
@CURLE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Curl_initinfo(%struct.Curl_easy* %0) #0 {
  %2 = alloca %struct.Curl_easy*, align 8
  %3 = alloca %struct.Progress*, align 8
  %4 = alloca %struct.PureInfo*, align 8
  store %struct.Curl_easy* %0, %struct.Curl_easy** %2, align 8
  %5 = load %struct.Curl_easy*, %struct.Curl_easy** %2, align 8
  %6 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %5, i32 0, i32 1
  store %struct.Progress* %6, %struct.Progress** %3, align 8
  %7 = load %struct.Curl_easy*, %struct.Curl_easy** %2, align 8
  %8 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %7, i32 0, i32 0
  store %struct.PureInfo* %8, %struct.PureInfo** %4, align 8
  %9 = load %struct.Progress*, %struct.Progress** %3, align 8
  %10 = getelementptr inbounds %struct.Progress, %struct.Progress* %9, i32 0, i32 7
  store i64 0, i64* %10, align 8
  %11 = load %struct.Progress*, %struct.Progress** %3, align 8
  %12 = getelementptr inbounds %struct.Progress, %struct.Progress* %11, i32 0, i32 6
  store i64 0, i64* %12, align 8
  %13 = load %struct.Progress*, %struct.Progress** %3, align 8
  %14 = getelementptr inbounds %struct.Progress, %struct.Progress* %13, i32 0, i32 5
  store i64 0, i64* %14, align 8
  %15 = load %struct.Progress*, %struct.Progress** %3, align 8
  %16 = getelementptr inbounds %struct.Progress, %struct.Progress* %15, i32 0, i32 4
  store i64 0, i64* %16, align 8
  %17 = load %struct.Progress*, %struct.Progress** %3, align 8
  %18 = getelementptr inbounds %struct.Progress, %struct.Progress* %17, i32 0, i32 3
  store i64 0, i64* %18, align 8
  %19 = load %struct.Progress*, %struct.Progress** %3, align 8
  %20 = getelementptr inbounds %struct.Progress, %struct.Progress* %19, i32 0, i32 2
  store i64 0, i64* %20, align 8
  %21 = load %struct.Progress*, %struct.Progress** %3, align 8
  %22 = getelementptr inbounds %struct.Progress, %struct.Progress* %21, i32 0, i32 1
  store i64 0, i64* %22, align 8
  %23 = load %struct.Progress*, %struct.Progress** %3, align 8
  %24 = getelementptr inbounds %struct.Progress, %struct.Progress* %23, i32 0, i32 0
  store i32 0, i32* %24, align 8
  %25 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %26 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %25, i32 0, i32 17
  store i64 0, i64* %26, align 8
  %27 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %28 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %27, i32 0, i32 16
  store i64 0, i64* %28, align 8
  %29 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %30 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %29, i32 0, i32 15
  store i64 0, i64* %30, align 8
  %31 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %32 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %31, i32 0, i32 0
  store i32 -1, i32* %32, align 8
  %33 = load i32, i32* @FALSE, align 4
  %34 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %35 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %34, i32 0, i32 14
  store i32 %33, i32* %35, align 8
  %36 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %37 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %36, i32 0, i32 13
  store i64 0, i64* %37, align 8
  %38 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %39 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %38, i32 0, i32 12
  store i64 0, i64* %39, align 8
  %40 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %41 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %40, i32 0, i32 11
  store i64 0, i64* %41, align 8
  %42 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %43 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %42, i32 0, i32 10
  store i64 0, i64* %43, align 8
  %44 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %45 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %44, i32 0, i32 9
  store i64 0, i64* %45, align 8
  %46 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %47 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %46, i32 0, i32 8
  %48 = load i32*, i32** %47, align 8
  %49 = call i32 @free(i32* %48)
  %50 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %51 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %50, i32 0, i32 8
  store i32* null, i32** %51, align 8
  %52 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %53 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %52, i32 0, i32 7
  %54 = load i32*, i32** %53, align 8
  %55 = call i32 @free(i32* %54)
  %56 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %57 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %56, i32 0, i32 7
  store i32* null, i32** %57, align 8
  %58 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %59 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %58, i32 0, i32 1
  %60 = load i8*, i8** %59, align 8
  %61 = getelementptr inbounds i8, i8* %60, i64 0
  store i8 0, i8* %61, align 1
  %62 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %63 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %62, i32 0, i32 2
  %64 = load i8*, i8** %63, align 8
  %65 = getelementptr inbounds i8, i8* %64, i64 0
  store i8 0, i8* %65, align 1
  %66 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %67 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %66, i32 0, i32 6
  store i64 0, i64* %67, align 8
  %68 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %69 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %68, i32 0, i32 5
  store i64 0, i64* %69, align 8
  %70 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %71 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %70, i32 0, i32 4
  store i64 0, i64* %71, align 8
  %72 = load %struct.PureInfo*, %struct.PureInfo** %4, align 8
  %73 = getelementptr inbounds %struct.PureInfo, %struct.PureInfo* %72, i32 0, i32 3
  store i64 0, i64* %73, align 8
  %74 = load i32, i32* @CURLE_OK, align 4
  ret i32 %74
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
